tests/negative/regression/r32.orng
fn main() -> Int { 
    let b = while true; impl for [] comptime {} {} {}
} 
